added two end points: cowo and topic detection.